<resources>
    <string name="app_name">PokeSec</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="nav_header_title">Карманный секретарь</string>
<!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
    <string name="nav_header_desc">Меню</string>
    <string name="action_settings">Настройки</string>
    <string name="action_logout">Выйти из профиля</string>

    <string name="menu_home">Домой</string>
    <string name="menu_login">Вход</string>
    <string name="menu_registration">Регистрация</string>
    <string name="menu_create">Создать мероприятие или задачу</string>
    <string name="menu_change">Изменить мероприятие или задачу</string>
    <string name="menu_credits">О приложении</string>
    <string name="menu_team">Команды</string>
    <string name="text_accounts">Все аккаунты</string>
    <string name="hint_name">Имя</string>
    <string name="hint_email">Почта</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_confirm_password">Подтвердить пароль</string>
    <string name="text_login">Вход</string>
    <string name="text_register">Зарегистрироваться</string>
    <string name="error_message_name">Введите имя!</string>
    <string name="error_message_email">Введите почту!</string>
<!--    <string name="error_message_age">Enter Age</string>-->
    <string name="error_message_password">Введите пароль!</string>
    <string name="success_message">Вы успешно зарегестрированы!</string>
    <string name="text_not_member">Ещё нет аккаунта? Заведите его!</string>
    <string name="text_already_member">Уже есть аккаунт? Войдите</string>
    <string name="error_email_exists">Эта почта уже зарегестрирована!</string>
    <string name="error_password_match">Пароли не совпадают!</string>
    <string name="error_valid_email_password">Неправильная почта или пароль</string>
    <string name="text_hello">Привет,</string>
    <string name="text_title">Карманный секретарь</string>
</resources>