<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.peace.ttd.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.peace.ttd.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_registration"
        android:name="com.peace.ttd.ui.registration.RegistrationFragment"
        android:label="@string/menu_registration"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/nav_create"
        android:name="com.peace.ttd.ui.create.CreateFragment"
        android:label="@string/menu_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/nav_change"
        android:name="com.peace.ttd.ui.change.ChangeFragment"
        android:label="@string/menu_change"
        tools:layout="@layout/fragment_change" />
</navigation>